k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-svc
spec:
  selector:
    app: game-2048
  ports:
    - port: 80
      targetPort: 80
